# dialog-gen

./: Cargo.toml  README.md
demo/prompt1/: directions.txt  generated-dialog1.txt  prompt.txt  scene.txt  speaker1.txt  speaker2.txt
demo/prompt2/: directions.txt  generated-dialog1.txt  prompt.txt  scene.txt  speaker1.txt  speaker2.txt
demo/prompt3-llama/: directions.txt  edited-metadata.txt  edited-podcast.txt  generated-dialog1.txt  output-metadata1.txt  speaker1.txt  speaker2.txt
demo/prompt3-mistral/: generated-dialog1.txt  output-metadata1.txt  prompt.txt  scene.txt
docs/: architecture.md  design.md  plan.md  prd.md  status.md
src/: config.rs  editor.rs  error.rs  main.rs  ollama.rs  orchestrator.rs  output.rs
