[package]
name = "dialog-gen"
version = "0.1.0"
edition = "2024"
description = "Generate AI-powered dialog between two characters using local LLM"
authors = ["Mike"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
